Try to fix the cutoff but propperly this time.

--- a/themes/shoka/source/css/_common/outline/sidebar/author.styl
+++ b/themes/shoka/source/css/_common/outline/sidebar/author.styl
@@ -4,10 +4,6 @@
     @extend .shake;
   }
 
-  element.style {
-    padding-top: 25px;
-  }
-
   .image {
     border: .0625rem solid var(--body-bg-shadow);
     display: block;
